@@ -459,7 +459,6 @@ ui_trdos_disk_write( trdos_drive_number which )
   return 0;
 }
 
-#ifdef HAVE_LIBDSK_H
 int
 ui_plusd_disk_write( plusd_drive_number which )
 {
@@ -486,7 +485,6 @@ ui_plusd_disk_write( plusd_drive_number which )
 
   return 0;
 }
-#endif			/* #ifdef HAVE_LIBDSK_H */
 
 int
 ui_get_rollback_point( GSList *points )
